Inserción de imagenes en la tabla teléfonos

--- a/src/views/pdfs/reporte-telefonos-usuario.ejs
+++ b/src/views/pdfs/reporte-telefonos-usuario.ejs
@@ -288,9 +288,9 @@
                         <th>Marca/Modelo</th>
                         <th>IP</th>
                         <th>MAC</th>
-                        <th>Email</th>
+                        <th>IMEI</th>
                         <th>Línea</th>
-                        <th>Estado</th>
+                       
                     </tr>
                 </thead>
                 <tbody>
@@ -304,9 +304,7 @@
                         <td><%= telefono.mac_telefono || 'N/A' %></td>
                         <td><%= telefono.mail_telefono || 'N/A' %></td>
                         <td><%= telefono.linea_telefono || 'N/A' %></td>
-                        <td class="text-center">
-                            <span class="badge badge-success">Activo</span>
-                        </td>
+                       
                     </tr>
                     <% }); %>
                 </tbody>
@@ -387,7 +385,7 @@
                         <th>Marca/Modelo</th>
                         <th>IP</th>
                         <th>MAC</th>
-                        <th>Email</th>
+                        <th>IMEI</th>
                         <th>Línea</th>
                     </tr>
                 </thead>
